namespaces/dialog-flow/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dialog-flow
  #labels:
  #  istio-injection: enabled
