namespaces/dialog-flow/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: dialog-flow-gateway
  annotations:
    configmanagement.gke.io/cluster-selector: selector-env-dev
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - dialog-flow.mytest.com
    port:
      number: 80
      name: http
      protocol: HTTP
  - hosts:
    - dialog-flow.mytest.com
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: "dialog-flow-cert-tls"
      mode: MUTUAL
