namespaces/dialog-flow/virtual_service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dialog-flow-virtual-service
  annotations:
    configmanagement.gke.io/cluster-selector: selector-env-dev
spec:
  hosts:
  - dialog-flow.mytest.com
  gateways:
  - dialog-flow-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: dialog-flow.default.svc.cluster.local
        port:
          number: 8080
